--- a/style.css
+++ b/style.css
@@ -296,7 +296,7 @@
 }
 
 #welcome-screen {
-    background-color: rgba(0, 0, 0, 0.863);
+    background-color: black;
     display: flex;
     max-width: 100vw;
     justify-content: center;
