--- a/style.css
+++ b/style.css
@@ -445,6 +445,8 @@ footer {
     .advertise {
         width: 100%;
         padding-top: 40px; 
+        padding-left:10px;
+        padding-right:10px;
         /* margin-right: 50px; */
     }
     .welcome {
