--- a/style.css
+++ b/style.css
@@ -451,6 +451,8 @@ footer {
     }
     .welcome {
         padding-top: 40px; 
+        padding-left:10px;
+        padding-right:10px;
         width: 100%;
         margin: auto;
     }
