--- a/style.css
+++ b/style.css
@@ -269,7 +269,7 @@
     background-image: url('1.jpg');
     background-position: center;
     background-size: cover;
-    box-shadow: 1px 2px 10px rgb(7, 0, 14);
+    box-shadow: 1px 2px 10px 5px rgb(7, 0, 14);
     animation: slider 16s infinite linear;
     border-radius: 15px;
 }
