--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 * {
     margin: 0px;
     padding: 0px;
-    border: 0;
+    border: 0px;
     font-family: 'Poppins', sans-serif;
 }
 
@@ -14,7 +14,7 @@
     display: flex;
     min-height: 50px;
     width: 100%;
-    background-color: black;
+    background-color: rgb(0, 0, 0);
     justify-content: left;
     align-items: center;
     text-align: left;
@@ -66,12 +66,25 @@
 }
 
 .schoolname {
-    display: block;
+    display: flex;
     color: white;
     background-color: black;
     min-height: 60px;
     width: 100%;
-    font-size: 50px;
+    font-size: 40px;
+    font-family: 'Poppins', sans-serif;
+    text-align: center;
+    justify-content: center;
+    align-items: center;
+}
+
+.name {
+    display: block;
+    color: white;
+    background-color: black;
+    min-height: 60px;
+    width: 80%;
+    font-size: 40px;
     font-family: 'Poppins', sans-serif;
     text-align: center;
     justify-content: center;
@@ -80,7 +93,7 @@
 
 .navcontainer {
     position: sticky;
-    top: 0px;
+    top: -1px;
     left: 0px;
     display: flex;
     max-width: 100vw;
@@ -90,7 +103,7 @@
 .logo {
     display: flex;
     height: 65px;
-    width: 5%;
+    width: 20%;
     align-items: center;
     justify-content: center;
     margin: auto;
@@ -103,8 +116,19 @@
     width: 60px;
 }
 
+.logow {
+    position: relative;
+    top: 0px;
+    display: none;
+}
+
+.logow img {
+    height: 60px;
+    width: auto;
+}
+
 .navbar {
-    width: 75%;
+    width: 100%;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -119,7 +143,9 @@
     text-decoration: none;
     margin: 10px;
     font-weight: 400;
-    border-radius: 8px;
+    border-top-left-radius: 8px;
+    border-top-right-radius: 8px;
+    /* border-radius: 8px; */
     padding: 5px 5px;
     border: 2px solid rgb(255, 255, 255);
 }
@@ -128,6 +154,8 @@
     color: rgb(0, 0, 0);
     background-color: rgb(255, 255, 255);
     border: 2px solid rgb(0, 0, 0);
+    transition: all 0.2s ease-out;
+    border-radius: 8px;
 }
 
 
@@ -149,7 +177,7 @@
 .dropbtn {
     /* background-color: rgb(33, 90, 175); */
     color: white;
-    padding: 7px;
+    /* padding: 7px; */
     font-size: 14px;
     border-radius: 5px;
 }
@@ -190,7 +218,9 @@
     font-weight: 400;
     padding: 4px;
     /* border-width: ; */
-    border-radius: 8px;
+    /* border-radius: 8px; */
+    border-top-left-radius: 8px;
+    border-top-right-radius: 8px;
 }
 
 
@@ -201,6 +231,7 @@
     color: black;
     font-weight: bold;
     border: 2px solid rgb(0, 0, 0);
+    transition: all 0.2s ease-out;
 }
 
 
@@ -216,6 +247,7 @@
 .dropdown:hover {
     /* background-color: rgb(33, 90, 175); */
     color: black;
+    transition: all 0.2s ease-out;
 }
 
 #home {
@@ -227,8 +259,9 @@
 }
 
 .parallax {
-    background: rgba(0, 0, 0, 0.911) url('backgroundfixed.jpg') repeat fixed 100%;
+    background: rgba(0, 0, 0, 0.211) url('backgroundfixed.jpg') repeat fixed 100%;
     background-size: cover;
+    background-blend-mode: darken;
     width: 100%;
     height: auto;
 }
@@ -266,28 +299,30 @@
     /* margin-right: 200px; */
     margin: auto;
     width: 75%;
-    height: 300px;
+    height: 400px;
     background-image: url('1.jpg');
     background-position: center;
     background-size: cover;
-    box-shadow: 1px 2px 10px 5px rgb(7, 0, 14);
-    animation: slider 16s infinite linear;
-    border-radius: 15px;
+    box-shadow: 1px 2px 10px rgba(255, 255, 255, 0.329);
+    animation: slider 30s infinite linear;
+    border-top-left-radius: 15px;
+    border-top-right-radius: 15px;
 }
 
 .slides:hover {
-    box-shadow: 1px 2px 10px 10px rgb(7, 0, 14);
+    box-shadow: 1px 2px 10px rgba(255, 255, 255, 0.89);
+    transition: all 0.3s ease-out;
 }
 
 @keyframes slider {
     0% {
-        background-image: url('1.jpg');
-    }
-    20% {
         background-image: url('2.jpg');
     }
-    40% {
+    20% {
         background-image: url('3.jpg');
+    }
+    40% {
+        background-image: url('1.jpg');
     }
     60% {
         background-image: url('4.jpg');
@@ -298,11 +333,12 @@
 }
 
 #welcome-screen {
-    background-color: black;
+    background: black;
     display: flex;
     max-width: 100vw;
     justify-content: center;
     margin: auto;
+    padding: 20px;
     color: white;
 }
 
@@ -315,7 +351,6 @@
     text-align: center;
 }
 
-
 .welcome {
     width: 60%;
     margin-left: 50px;
@@ -324,7 +359,6 @@
 .welcome h1 {
     text-align: center;
 }
-
 
 
 /* from upload */
@@ -454,32 +488,37 @@ footer {
     .schoolname {
         display: none;
     }
+    .logow {
+        display: block;
+    }
     .navcontainer {
         flex-direction: column;
         max-width: 100vw;
-        height: 370px;
+        height: auto;
         justify-content: center;
         margin: auto;
-        transition: all 0.0001s ease-out;
+        transition: all 0.5s ease-out;
     }
     .navbar {
         justify-content: center;
         margin: auto;
-        padding: 5px;
+        padding: 8px;
         flex-direction: column;
-        max-width: 100vw;
+        /* max-width: 100vw; */
+        width: 80%;
     }
     .navbar li {
         padding: 10px;
     }
     .navbar li a {
-        padding: 7px 15px;
-        border-radius: 8px;
+        padding: 5px 15px;
+        border-top-left-radius: 13px;
+        border-top-right-radius: 13px;
         border: 2px solid white;
     }
     .navbar li a:hover {
-        padding: 7px 15px;
-        border-radius: 8px;
+        padding: 5px 15px;
+        border-radius: 13px;
         border: 2px solid rgb(0, 0, 0);
     }
     /* #home{
@@ -522,7 +561,7 @@ footer {
     }
     #welcome-screen {
         flex-direction: column;
-        width: 100%;
+        max-width: 100vw;
         margin: auto;
         /* background-color: rgba(0, 0, 0, 0.863);
         display: flex;
