--- a/src/App.css
+++ b/src/App.css
@@ -12,7 +12,6 @@
 
 
 .App{
-  padding: 0.3rem 3.5rem;
   overflow: hidden;
   color: var(--black);    
 }
@@ -25,11 +24,12 @@
   padding: 11px 26px 11px 26px;
   background: linear-gradient(180deg, #fdc50f 26.71%, #fb982f 99.36%);
   box-shadow: 0px 20px 24px 3px rgba(251, 161, 40, 0.42);
+   border: 1px solid var(--orange);
 }
 
 .button:hover{
   background: white;
   cursor: pointer;
   color: var(--orange);
-  border: 1px solid var(--orange);
+  /* border: 1px solid var(--orange); */
 }
