--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -1,10 +1,12 @@
 .n-container {
+  position: absolute;
+  z-index: 2;
+  padding: 0.3rem 3.5rem;
   width: 100%;
   height: 80px;
   display: flex;
   align-items: center;
   justify-content: space-between;
-
   .n-left {
     display: flex;
     align-items: center;
@@ -29,8 +31,9 @@
         gap: 2rem;
         li {
           list-style: none;
-          color: var(--orange);
+          color: white;
           font-size: 18px;
+          font-weight: 500;
           &:hover {
             cursor: pointer;
           }
@@ -39,6 +42,7 @@
     }
     .n-contact {
       font-size: 18px;
+      font-weight: 600;
       width: 8rem;
     }
     .n-login {
