--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -36,6 +36,7 @@
           font-weight: 500;
           &:hover {
             cursor: pointer;
+            color: var(--orange);
           }
         }
       }
