--- a/src/components/Intro/Intro.scss
+++ b/src/components/Intro/Intro.scss
@@ -40,18 +40,19 @@
     align-items: center;
     justify-content: center;
     h1 {
-      padding: 1rem 5rem;
-      border-radius: 5rem;
-      background: var(--black);
-      box-shadow: 0px 20px 24px 3px rgba(0, 0, 0, 0.563);
+      // padding: 1rem 5rem;
+      // border-radius: 5rem;
+      // background: var(--black);
+      // box-shadow: 0px 20px 24px 3px rgba(0, 0, 0, 0.563);
       font-family: "Merriweather", serif;
       font-size: 38px;
       font-weight: 600;
+      text-shadow: 2px 2px 4px var(--orange);
     }
     h2 {
       font-size: 34px;
       color: white;
-  text-shadow: 1px 1px 2px black, 0 0 25px blue, 0 0 5px darkblue;
+      text-shadow: 1px 1px 2px black, 0 0 25px blue, 0 0 5px darkblue;
     }
     .start {
       position: absolute;
@@ -61,14 +62,14 @@
       display: flex;
       align-items: center;
       justify-content: center;
-      img{
+      img {
         height: 110px;
-    
-      &:hover{
-        cursor: pointer;
+
+        &:hover {
+          cursor: pointer;
+        }
       }
-      }
-     
+
       // span {
       //   IoMdPower {
       //     &:hover {
