--- a/src/components/Intro/Intro.scss
+++ b/src/components/Intro/Intro.scss
@@ -1,9 +1,3 @@
-* {
-  margin: 0;
-  box-sizing: border-box;
-  color: rgb(255, 255, 255);
-}
-
 .Intro {
   @import url(https://fonts.googleapis.com/css?family=Merriweather:300,300italic,regular,italic,700,700italic,900,900italic);
   width: 100%;
@@ -45,7 +39,8 @@
       // background: var(--black);
       // box-shadow: 0px 20px 24px 3px rgba(0, 0, 0, 0.563);
       font-family: "Merriweather", serif;
-      font-size: 38px;
+      color: white;
+      font-size: 50px;
       font-weight: 600;
       text-shadow: 2px 2px 4px var(--orange);
     }
