--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,15 @@
   color: var(--orange);
   /* border: 1px solid var(--orange); */
 }
+
+.blur{
+  position: absolute;
+  width: 22rem;
+  height: 14rem;
+  border-radius: 50%;
+  background: #edd0ff;
+  filter: blur(72px);
+  z-index: -9;
+  top: -18%;
+  left: 56%;
+}
