--- a/src/components/BestEducation/BestEducation.scss
+++ b/src/components/BestEducation/BestEducation.scss
@@ -15,9 +15,10 @@
     height: 100%;
     align-items: center;
     justify-content: center;
+    // background-color: aqua;
     div:nth-of-type(1){
       position: absolute;
-      left: 0;
+      right: -1;
       top: 2rem;
     }
     div:nth-of-type(2){
@@ -25,15 +26,23 @@
       right: -1;
       top: 2rem;
     }
+    // div:nth-of-type(3){
+    //   position: absolute;
+    //   left: 0;
+    //   bottom: -1;
+    // }
     div:nth-of-type(3){
-      position: absolute;
-      left: 0;
-      bottom: -1;
-    }
-    div:nth-of-type(4){
       position: absolute;
       right: -1;
       bottom: -1;
+    }
+    .t-blur1{
+      position: absolute;
+      top: 25rem;
+      left: -5rem;
+    }
+    .t-blur2{
+      top: 25rem;
     }
   }
   .cards-details{
