--- a/src/components/BestEducation/BestEducation.scss
+++ b/src/components/BestEducation/BestEducation.scss
@@ -1,4 +1,4 @@
-.best-education{
+.best-education {
   padding: 0.3rem 3.5rem;
   color: black;
   height: 100vh;
@@ -7,7 +7,8 @@
   position: relative;
   align-items: center;
   justify-content: center;
-  .cards{
+
+  .cards {
     display: flex;
     flex-wrap: wrap;
     position: relative;
@@ -16,41 +17,68 @@
     align-items: center;
     justify-content: center;
     // background-color: aqua;
-    div:nth-of-type(1){
+    div:nth-of-type(1) {
       position: absolute;
       right: -1;
-      top: 2rem;
+      top: 1.3rem;
     }
-    div:nth-of-type(2){
+    div:nth-of-type(2) {
       position: absolute;
       right: -1;
-      top: 2rem;
+      top: 1.3rem;
     }
     // div:nth-of-type(3){
     //   position: absolute;
     //   left: 0;
     //   bottom: -1;
     // }
-    div:nth-of-type(3){
+    div:nth-of-type(3) {
       position: absolute;
       right: -1;
       bottom: -1;
     }
-    .t-blur1{
+    .t-blur1 {
       position: absolute;
       top: 25rem;
       left: -5rem;
     }
-    .t-blur2{
+    .t-blur2 {
       top: 25rem;
     }
   }
-  .cards-details{
+  .cards-details {
     display: flex;
     position: relative;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
     width: 50%;
     height: 100%;
+    // gap: 2rem;
     color: rgb(0, 0, 0);
+    // background-color: cadetblue;
+
+    span:nth-of-type(1) {
+      h1 {
+        color: var(--orange);
+        font-size: 38px;
+      }
+    }
+    span:nth-of-type(2) {
+      h1 {
+        color: var(--black);
+        font-size: 38px;
+      }
+    }
+
+    span:nth-of-type(3) {
+      position: relative;
+      display: flex;
+      align-items: center;
+      text-align: center;
+      justify-content: center;
+      padding: 0px 6rem 0px 6rem;
+      color: var(--gray);
+    }
   }
 }
-
