--- a/src/components/Intro/Intro.scss
+++ b/src/components/Intro/Intro.scss
@@ -30,7 +30,7 @@
     width: 100%;
     display: flex;
     flex-direction: column;
-    gap: 2rem;
+    // gap: 1rem;
     align-items: center;
     justify-content: center;
     h1 {
@@ -45,6 +45,7 @@
       text-shadow: 2px 2px 4px var(--orange);
     }
     h2 {
+      margin-top: -1rem;
       font-size: 34px;
       color: white;
       text-shadow: 1px 1px 2px black, 0 0 25px blue, 0 0 5px darkblue;
@@ -57,14 +58,13 @@
       display: flex;
       align-items: center;
       justify-content: center;
+      margin-top: -3rem;
       img {
         height: 110px;
-
         &:hover {
           cursor: pointer;
         }
       }
-
       // span {
       //   IoMdPower {
       //     &:hover {
